8/3/18 - Added side menu wRp portfolio, design changes UP

--- a/unityplugins-site/css/main.css
+++ b/unityplugins-site/css/main.css
@@ -84,7 +84,7 @@ html {
   /* 3 */
   background: #fff;
   color: #666;
-  letter-spacing: 1px;
+  /* letter-spacing: 1px; */
 }
 
 /*
@@ -92,6 +92,7 @@ html {
  */
 body {
   margin: 0;
+  line-height: 1.12 !important;
 }
 
 /* Links
